<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/mon_compte"
           android:textSize="40sp"
           android:fontFamily="@font/bungee"
           android:textColor="@color/black"
           android:textStyle="bold"
           android:padding="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/nom"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="97dp"
                android:text="@string/pr_nom_s"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etRNom"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:background="@drawable/background_button_ghost"
                android:gravity="center"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/etPrenom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_button_ghost"
                android:gravity="center"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="E-mail:"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etREmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button_ghost"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="Mot de passe: "
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etRMotDePasse"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button_ghost"
            android:gravity="center"
            android:inputType="textPersonName|textPassword"


            android:minHeight="48dp"
            android:textStyle="bold"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck" />

        <ProgressBar
            android:id="@+id/prob"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="invisible" />


        <Button
            android:id="@+id/btnRCompte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/arrondir"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/cr_er_un_compte"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvRConnecter"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/deja_un_compte_se_connecter"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>